make R CMD build --binary defunct
git-svn-id: https://svn.r-project.org/R/trunk@54890 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -1741,7 +1741,7 @@ possible.
 The code in package vignettes (@pxref{Writing package vignettes}) is
 executed, and the vignettes re-made from their sources as a check of
 completeness of the sources (unless there is a @samp{BuildVignettes}
-field in the package's @file{DESCRIPTION} file with a false value.
+field in the package's @file{DESCRIPTION} file with a false value).
 
 @item
 The PDF version of the package's manual is created (to check that the
