--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -278,9 +278,9 @@ entirely in @acronym{ASCII} --- if this is not possible it must contain
 an @samp{Encoding} field (see below).
 
 The mandatory @samp{Package} field gives the name of the package.  This
-should contain only letters, numbers and dot, and start with a letter.
-To be portable to Windows, it must not end in a dot.  (Translation
-packages are allowed names of the form @samp{Translation-@var{ll}}.)
+should contain only letters, numbers and dot, and start with a letter
+and not end in a dot.  (Translation packages are allowed names of the
+form @samp{Translation-@var{ll}}.)
 
 The mandatory @samp{Version} field gives version of the package.  This is a
 sequence of at least @emph{two} (and usually three) non-negative
