disallow R as a package name
git-svn-id: https://svn.r-project.org/R/trunk@54913 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -280,7 +280,8 @@ an @samp{Encoding} field (see below).
 The mandatory @samp{Package} field gives the name of the package.  This
 should contain only letters, numbers and dot, and start with a letter
 and not end in a dot.  (Translation packages are allowed names of the
-form @samp{Translation-@var{ll}}.)
+form @samp{Translation-@var{ll}}.)  Do not use @samp{R} as a package
+name: that has a special meaning in package dependency analysis.
 
 The mandatory @samp{Version} field gives version of the package.  This is a
 sequence of at least @emph{two} (and usually three) non-negative
