deprecate single-character package names
git-svn-id: https://svn.r-project.org/R/branches/R-2-13-branch@54923 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -282,7 +282,9 @@ should contain only letters, numbers and dot, and start with a letter.
 To be portable to Windows, it must not end in a dot.  (Translation
 packages are allowed names of the form @samp{Translation-@var{ll}}.)  Do
 not use @samp{R} as a package name: that has a special meaning in
-package dependency analysis.
+package dependency analysis.  Other single-character names are
+deprecated and will be disallowed as from @R{} 2.14.0, as will names
+ending in a dot.
 
 The mandatory @samp{Version} field gives version of the package.  This is a
 sequence of at least @emph{two} (and usually three) non-negative
