--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -6075,6 +6075,43 @@ $7 = 5
 @end group
 @end example
 
+Another alternative available from R 2.13.0 on is the @code{inspect}
+function which shows the low-level structure of the objects
+recursively (addresses differ from the above as this example is
+created on another machine):
+
+@example
+@group
+(gdb) p inspect($1)
+@@100954d18 19 VECSXP g0c2 [OBJ,NAM(2),ATT] (len=2, tl=0)
+  @@100954d50 13 INTSXP g0c2 [NAM(2)] (len=3, tl=0) 1,2,3
+  @@100954d88 13 INTSXP g0c2 [NAM(2)] (len=3, tl=0) 4,5,6
+ATTRIB:
+  @@102a70140 02 LISTSXP g0c0 [] 
+    TAG: @@10083c478 01 SYMSXP g0c0 [MARK,NAM(2),gp=0x4000] "names"
+    @@100954dc0 16 STRSXP g0c2 [NAM(2)] (len=2, tl=0)
+      @@10099df28 09 CHARSXP g0c1 [MARK,gp=0x21] "a"
+      @@10095e518 09 CHARSXP g0c1 [MARK,gp=0x21] "b"
+    TAG: @@100859e60 01 SYMSXP g0c0 [MARK,NAM(2),gp=0x4000] "row.names"
+    @@102a6f868 13 INTSXP g0c1 [NAM(2)] (len=2, tl=1) -2147483648,-3
+    TAG: @@10083c948 01 SYMSXP g0c0 [MARK,gp=0x4000] "class"
+    @@102a6f838 16 STRSXP g0c1 [NAM(2)] (len=1, tl=1)
+      @@1008c6d48 09 CHARSXP g0c2 [MARK,gp=0x21,ATT] "data.frame"
+@end group
+@end example
+
+In general the representation of each object follows the format:
+
+@smallexample
+@@<address> <type-nr> <type-name> <gc-info> [<flags>] ...
+@end smallexample
+
+For a more fine-grained control over the the depth of the recursion
+and the output of vectors @code{inspect3} takes additional two integer
+parameters: maximum depth and the maximal number of elements that will
+be printed for scalar vectors. The defaults in @code{inspect} are
+currently -1 (no limit) and 5 respectively.
+
 
 @node System and foreign language interfaces, The R API, Debugging, Top
 @chapter System and foreign language interfaces
