--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -1969,6 +1969,12 @@ prepended to the @env{PATH} so that references to @command{R} or
 running version of @R{}.}.  Finally, if there is a @file{Makefile} and
 it has a @samp{clean:} target, @command{make clean} is run.
 
+Note that it is pointless (and potentially misleading) to include in
+@file{inst/doc} @R{} code files which would be generated from vignettes,
+as these will be re-generated when the package is installed (unless the
+vignette does not generate any @R{} code, in which case it is also
+pointless/misleading).
+
 It is no longer necessary to provide a @file{00Index.dcf} file in the
 @file{inst/doc} directory---the corresponding information is generated
 automatically from the @code{\VignetteIndexEntry} statements in all
